--- a/index.html
+++ b/index.html
@@ -3,140 +3,183 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A Special Surprise</title>
+    <title>A Little Something</title>
     <style>
-        body {
-            background-color: #1a0b10;
-            color: #ffb7c5;
-            font-family: 'Georgia', serif;
+        :root {
+            --bg-color: #1a0b10;
+            --primary-love: #ff4d6d;
+            --soft-pink: #ffb7c5;
+        }
+
+        body, html {
             margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            background-color: var(--bg-color);
+            font-family: 'Palatino', 'Georgia', serif;
             overflow: hidden;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            text-align: center;
         }
 
-        /* Heart Shower Styling */
-        .heart {
+        /* 1. Background Shower */
+        .falling-item {
             position: absolute;
-            color: #ff4d6d;
-            font-size: 20px;
-            user-select: none;
+            top: -50px;
             pointer-events: none;
+            user-select: none;
             animation: fall linear forwards;
         }
 
         @keyframes fall {
-            0% { transform: translateY(-10vh) rotate(0deg); opacity: 1; }
-            100% { transform: translateY(110vh) rotate(360deg); opacity: 0; }
+            to {
+                transform: translateY(110vh) rotate(360deg);
+            }
         }
 
-        /* The Big Beating Heart */
-        #big-heart {
-            display: none; /* Hidden at first */
+        /* 2. The Big Heart Container */
+        #heart-container {
+            display: none;
+            opacity: 0;
+            transition: opacity 2s ease-in;
+            text-align: center;
+            z-index: 10;
+        }
+
+        .beating-heart {
+            font-size: 120px;
+            color: var(--primary-love);
             cursor: pointer;
-            font-size: 100px;
-            color: #ff4d6d;
-            text-shadow: 0 0 30px #ff4d6d;
-            animation: beat 1.2s infinite;
+            filter: drop-shadow(0 0 20px var(--primary-love));
+            animation: heartbeat 1.4s infinite;
             position: relative;
-            z-index: 100;
         }
 
-        #big-heart span {
+        .click-me-text {
             position: absolute;
-            top: 50%;
+            top: 55%;
             left: 50%;
             transform: translate(-50%, -50%);
-            font-size: 18px;
+            font-size: 16px;
             color: white;
-            white-space: nowrap;
-            font-family: sans-serif;
-            font-weight: bold;
+            font-family: 'Arial', sans-serif;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            pointer-events: none;
         }
 
-        @keyframes beat {
+        @keyframes heartbeat {
             0% { transform: scale(1); }
-            15% { transform: scale(1.25); }
-            30% { transform: scale(1); }
-            45% { transform: scale(1.15); }
+            10% { transform: scale(1.3); }
+            20% { transform: scale(1); }
+            40% { transform: scale(1.2); }
             60% { transform: scale(1); }
         }
 
-        /* Final Page Styling */
+        /* 3. The Final Reveal */
         #final-page {
             display: none;
+            opacity: 0;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
+            transition: opacity 2s ease-in;
         }
 
-        .decor {
-            font-size: 50px;
+        .hi-message {
+            font-size: 100px;
+            color: var(--soft-pink);
+            text-shadow: 0 0 30px var(--primary-love);
+            animation: float 3s ease-in-out infinite;
+        }
+
+        .teddy-row {
+            font-size: 40px;
             margin: 20px;
         }
 
-        .message {
-            font-size: 80px;
-            letter-spacing: 10px;
-            animation: glow 2s ease-in-out infinite alternate;
+        @keyframes float {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-20px); }
         }
 
-        @keyframes glow {
-            from { text-shadow: 0 0 10px #fff, 0 0 20px #ff4d6d; }
-            to { text-shadow: 0 0 20px #fff, 0 0 40px #ff4d6d; }
+        /* Mouse Trail */
+        .trail {
+            position: absolute;
+            pointer-events: none;
+            font-size: 20px;
+            animation: fadeOut 1s forwards;
+        }
+
+        @keyframes fadeOut {
+            to { opacity: 0; transform: scale(2) translateY(-20px); }
         }
     </style>
 </head>
 <body>
 
-    <div id="big-heart" onclick="showSurprise()">
-        ❤️
-        <span>Click me</span>
+    <div id="heart-container" onclick="revealSecret()">
+        <div class="beating-heart">
+            ❤️
+            <div class="click-me-text">Click me</div>
+        </div>
     </div>
 
     <div id="final-page">
-        <div class="decor">🌹 🧸 🌹 🧸 🌹</div>
-        <div class="message">..Hi..</div>
-        <div class="decor">🌹 🧸 🌹 🧸 🌹</div>
+        <div class="teddy-row">🧸 🌹 🧸 🌹 🧸</div>
+        <div class="hi-message">..Hi..</div>
+        <div class="teddy-row">🌹 🧸 🌹 🧸 🌹</div>
     </div>
 
     <script>
-        // 1. Automatic Heart Shower
-        function createHeart() {
-            const heart = document.createElement('div');
-            heart.classList.add('heart');
-            heart.innerHTML = '❤️';
-            heart.style.left = Math.random() * 100 + 'vw';
-            heart.style.animationDuration = (Math.random() * 3 + 2) + 's';
-            document.body.appendChild(heart);
-            setTimeout(() => heart.remove(), 5000);
+        // Automatic Rain of Hearts
+        function spawnItem(symbol) {
+            const item = document.createElement('div');
+            item.className = 'falling-item';
+            item.innerHTML = symbol || '❤️';
+            item.style.left = Math.random() * 100 + 'vw';
+            item.style.fontSize = Math.random() * 20 + 15 + 'px';
+            item.style.animationDuration = Math.random() * 3 + 4 + 's';
+            item.style.opacity = Math.random();
+            document.body.appendChild(item);
+            setTimeout(() => item.remove(), 7000);
         }
 
-        // Start showering immediately
-        setInterval(createHeart, 300);
+        let heartRain = setInterval(() => spawnItem('❤️'), 300);
 
-        // 2. Show the Big Heart after 5 seconds
+        // Show Big Heart after 5 seconds
         setTimeout(() => {
-            document.getElementById('big-heart').style.display = 'block';
+            const container = document.getElementById('heart-container');
+            container.style.display = 'block';
+            setTimeout(() => container.style.opacity = '1', 100);
         }, 5000);
 
-        // 3. Switch to the final "Hi" page
-        function showSurprise() {
-            document.getElementById('big-heart').style.display = 'none';
-            document.getElementById('final-page').style.display = 'flex';
+        // Reveal the final page
+        function revealSecret() {
+            clearInterval(heartRain);
+            document.getElementById('heart-container').style.display = 'none';
             
-            // Optional: Increase the rose/teddy shower on the final page
+            const final = document.getElementById('final-page');
+            final.style.display = 'flex';
+            setTimeout(() => final.style.opacity = '1', 100);
+
+            // Change rain to roses and teddies
             setInterval(() => {
-                const item = document.createElement('div');
-                item.classList.add('heart');
-                item.innerHTML = Math.random() > 0.5 ? '🌹' : '🧸';
-                item.style.left = Math.random() * 100 + 'vw';
-                item.style.animationDuration = '4s';
-                document.body.appendChild(item);
-            }, 200);
+                const icons = ['🌹', '🧸', '💖', '✨'];
+                spawnItem(icons[Math.floor(Math.random() * icons.length)]);
+            }, 150);
+
+            // Enable Mouse Trail
+            window.addEventListener('mousemove', (e) => {
+                const trail = document.createElement('div');
+                trail.className = 'trail';
+                trail.innerHTML = '✨';
+                trail.style.left = e.pageX + 'px';
+                trail.style.top = e.pageY + 'px';
+                document.body.appendChild(trail);
+                setTimeout(() => trail.remove(), 1000);
+            });
         }
     </script>
 </body>
