--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A Little Something</title>
+    <title>A Special Surprise</title>
     <style>
         :root {
             --bg-color: #1a0b10;
@@ -31,12 +31,11 @@
             pointer-events: none;
             user-select: none;
             animation: fall linear forwards;
+            z-index: 1;
         }
 
         @keyframes fall {
-            to {
-                transform: translateY(110vh) rotate(360deg);
-            }
+            to { transform: translateY(110vh) rotate(360deg); }
         }
 
         /* 2. The Big Heart Container */
@@ -64,7 +63,7 @@
             transform: translate(-50%, -50%);
             font-size: 16px;
             color: white;
-            font-family: 'Arial', sans-serif;
+            font-family: sans-serif;
             text-transform: uppercase;
             letter-spacing: 2px;
             pointer-events: none;
@@ -72,48 +71,41 @@
 
         @keyframes heartbeat {
             0% { transform: scale(1); }
-            10% { transform: scale(1.3); }
-            20% { transform: scale(1); }
-            40% { transform: scale(1.2); }
+            15% { transform: scale(1.3); }
+            30% { transform: scale(1); }
+            45% { transform: scale(1.15); }
             60% { transform: scale(1); }
         }
 
         /* 3. The Final Reveal */
         #final-page {
             display: none;
-            opacity: 0;
-            flex-direction: column;
-            align-items: center;
-            transition: opacity 2s ease-in;
+            z-index: 10;
         }
 
-        .hi-message {
-            font-size: 100px;
+        .typewriter-text {
+            font-size: 80px;
             color: var(--soft-pink);
-            text-shadow: 0 0 30px var(--primary-love);
-            animation: float 3s ease-in-out infinite;
+            text-shadow: 0 0 20px var(--primary-love);
+            white-space: nowrap;
+            overflow: hidden;
+            border-right: 3px solid var(--primary-love); /* The cursor */
+            margin: 0 auto;
         }
 
-        .teddy-row {
-            font-size: 40px;
-            margin: 20px;
-        }
-
-        @keyframes float {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-20px); }
-        }
-
-        /* Mouse Trail */
-        .trail {
+        /* Mouse Heart Trail */
+        .heart-trail {
             position: absolute;
             pointer-events: none;
-            font-size: 20px;
-            animation: fadeOut 1s forwards;
+            font-size: 18px;
+            color: var(--primary-love);
+            animation: fadeAndRise 1s forwards;
+            z-index: 5;
         }
 
-        @keyframes fadeOut {
-            to { opacity: 0; transform: scale(2) translateY(-20px); }
+        @keyframes fadeAndRise {
+            0% { opacity: 1; transform: scale(1); }
+            100% { opacity: 0; transform: scale(1.5) translateY(-30px); }
         }
     </style>
 </head>
@@ -127,13 +119,11 @@
     </div>
 
     <div id="final-page">
-        <div class="teddy-row">🧸 🌹 🧸 🌹 🧸</div>
-        <div class="hi-message">..Hi..</div>
-        <div class="teddy-row">🌹 🧸 🌹 🧸 🌹</div>
+        <div id="typewriter" class="typewriter-text"></div>
     </div>
 
     <script>
-        // Automatic Rain of Hearts
+        // 1. Initial Heart Rain
         function spawnItem(symbol) {
             const item = document.createElement('div');
             item.className = 'falling-item';
@@ -141,40 +131,50 @@
             item.style.left = Math.random() * 100 + 'vw';
             item.style.fontSize = Math.random() * 20 + 15 + 'px';
             item.style.animationDuration = Math.random() * 3 + 4 + 's';
-            item.style.opacity = Math.random();
+            item.style.opacity = Math.random() * 0.5 + 0.5;
             document.body.appendChild(item);
             setTimeout(() => item.remove(), 7000);
         }
 
         let heartRain = setInterval(() => spawnItem('❤️'), 300);
 
-        // Show Big Heart after 5 seconds
+        // 2. Reveal Heart after 5 seconds
         setTimeout(() => {
             const container = document.getElementById('heart-container');
             container.style.display = 'block';
             setTimeout(() => container.style.opacity = '1', 100);
         }, 5000);
 
-        // Reveal the final page
+        // 3. Typing Effect Logic
+        function typeWriter(text, i, fnCallback) {
+            if (i < text.length) {
+                document.getElementById("typewriter").innerHTML = text.substring(0, i+1);
+                setTimeout(function() {
+                    typeWriter(text, i + 1, fnCallback)
+                }, 200); // Speed of typing
+            }
+        }
+
+        // 4. Final Transition
         function revealSecret() {
             clearInterval(heartRain);
             document.getElementById('heart-container').style.display = 'none';
-            
-            const final = document.getElementById('final-page');
-            final.style.display = 'flex';
-            setTimeout(() => final.style.opacity = '1', 100);
+            document.getElementById('final-page').style.display = 'block';
 
-            // Change rain to roses and teddies
+            // Start the typing effect
+            typeWriter("..Hi..", 0);
+
+            // Change background rain to mix of roses/teddies
             setInterval(() => {
-                const icons = ['🌹', '🧸', '💖', '✨'];
+                const icons = ['🌹', '🧸', '💖'];
                 spawnItem(icons[Math.floor(Math.random() * icons.length)]);
-            }, 150);
+            }, 200);
 
-            // Enable Mouse Trail
+            // Enable Heart Mouse Trail
             window.addEventListener('mousemove', (e) => {
                 const trail = document.createElement('div');
-                trail.className = 'trail';
-                trail.innerHTML = '✨';
+                trail.className = 'heart-trail';
+                trail.innerHTML = '❤️';
                 trail.style.left = e.pageX + 'px';
                 trail.style.top = e.pageY + 'px';
                 document.body.appendChild(trail);
