--- a/index.html
+++ b/index.html
@@ -2,184 +2,288 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A Special Surprise</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>For My Everything</title>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Quicksand:wght@300;500&display=swap" rel="stylesheet">
     <style>
         :root {
-            --bg-color: #1a0b10;
+            --bg-color: #0f0508;
             --primary-love: #ff4d6d;
             --soft-pink: #ffb7c5;
+            --accent-glow: rgba(255, 77, 109, 0.6);
+            --gold: #d4af37;
         }
 
+        /* Essential for mobile to prevent accidental zooming/scrolling */
         body, html {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            background-color: var(--bg-color);
-            font-family: 'Palatino', 'Georgia', serif;
-            overflow: hidden;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            margin: 0; padding: 0; width: 100%; height: 100%;
+            overflow: hidden; background-color: white;
+            display: flex; justify-content: center; align-items: center;
+            font-family: 'Quicksand', sans-serif;
+            transition: background-color 2s ease;
+            touch-action: manipulation;
         }
 
-        /* 1. Background Shower */
-        .falling-item {
-            position: absolute;
-            top: -50px;
-            pointer-events: none;
-            user-select: none;
-            animation: fall linear forwards;
-            z-index: 1;
+        /* --- STAR EXPAND --- */
+        .star-expand {
+            clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+            animation: star-zoom 1.5s cubic-bezier(0.7, 0, 0.3, 1) forwards; 
+            background: #000; position: absolute; z-index: 1000;
+        }
+        @keyframes star-zoom { 0% { transform: scale(0); opacity: 1; } 100% { transform: scale(300); opacity: 0; } }
+
+        /* --- HEART SHOWER --- */
+        .heart-particle { position: absolute; top: -50px; pointer-events: none; animation: fall linear forwards; z-index: 100; }
+        @keyframes fall { to { transform: translateY(115vh) rotate(360deg); } }
+
+        /* --- SECTIONS --- */
+        .romantic-body { background: radial-gradient(circle at center, #2d0b16 0%, #0f0508 100%); }
+        .section { 
+            display: none; opacity: 0; text-align: center; z-index: 10; 
+            width: 90%; max-width: 400px; /* Limits width on big screens, perfect for mobile */
+            position: absolute; transition: opacity 0.8s ease; 
+        }
+        
+        .fancy-title { 
+            font-family: 'Dancing Script', cursive; 
+            color: var(--soft-pink); 
+            text-shadow: 0 0 15px var(--primary-love);
+            font-size: 2.8rem; /* Scaled down for mobile */
+            margin-bottom: 20px;
         }
 
-        @keyframes fall {
-            to { transform: translateY(110vh) rotate(360deg); }
+        .btn { 
+            padding: 15px 30px; font-size: 1rem; border: none; border-radius: 30px; 
+            cursor: pointer; transition: 0.3s; font-weight: 500;
+            box-shadow: 0 4px 15px rgba(255, 77, 109, 0.3);
+            -webkit-tap-highlight-color: transparent; /* Removes blue flash on mobile tap */
+        }
+        #yes-btn { background: var(--primary-love); color: white; }
+        #no-btn { background: rgba(255, 255, 255, 0.1); color: var(--soft-pink); border: 1px solid var(--soft-pink); backdrop-filter: blur(5px); }
+
+        /* --- SCRAPBOARD (MOBILE OPTIMIZED) --- */
+        #scrapboard-screen { 
+            width: 100vw; height: 100vh; position: absolute; top: 0; left: 0;
+            display: none; background: var(--bg-color); 
+            padding: 20px 10px; box-sizing: border-box; z-index: 20;
+            overflow-y: auto; /* Allows scrolling on mobile */
+            flex-wrap: wrap; justify-content: center; align-content: flex-start; gap: 20px;
         }
 
-        /* 2. The Big Heart Container */
-        #heart-container {
-            display: none;
-            opacity: 0;
-            transition: opacity 2s ease-in;
-            text-align: center;
-            z-index: 10;
+        .memory-card { 
+            background: white; padding: 8px 8px 30px 8px; 
+            box-shadow: 0 10px 20px rgba(0,0,0,0.5); 
+            animation: slide-up 0.8s forwards; opacity: 0; border-radius: 2px;
+            width: 40%; /* Two photos per row on mobile */
+            min-width: 140px;
+        }
+        .memory-card img { width: 100%; height: auto; aspect-ratio: 3/4; object-fit: cover; display: block; }
+        
+        .floating-text { 
+            font-family: 'Dancing Script', cursive;
+            color: var(--soft-pink); font-size: 1.5rem; 
+            text-shadow: 2px 2px 10px rgba(255, 77, 109, 0.8); 
+            animation: slide-up 1s ease forwards; opacity: 0; 
+            width: 100%; text-align: center;
         }
 
-        .beating-heart {
-            font-size: 120px;
-            color: var(--primary-love);
-            cursor: pointer;
-            filter: drop-shadow(0 0 20px var(--primary-love));
-            animation: heartbeat 1.4s infinite;
-            position: relative;
+        @keyframes slide-up { 
+            from { transform: translateY(40px) rotate(-5deg); opacity: 0; } 
+            to { transform: translateY(0) rotate(var(--r)); opacity: 1; } 
         }
 
-        .click-me-text {
-            position: absolute;
-            top: 55%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 16px;
-            color: white;
-            font-family: sans-serif;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-            pointer-events: none;
+        /* --- VIDEO (MOBILE CINEMATIC) --- */
+        #video-container { 
+            display:none; width: 100vw; height: 100vh; background: black; 
+            position: fixed; top: 0; left: 0; z-index: 5000; 
+            justify-content: center; align-items: center; opacity: 0; transition: opacity 1s; 
+        }
+        video { width: 95%; height: auto; border-radius: 8px; }
+
+        .continue-btn {
+            position: sticky; bottom: 20px; z-index: 100;
+            background: white !important; color: var(--primary-love) !important;
+            margin-top: 20px;
         }
 
-        @keyframes heartbeat {
-            0% { transform: scale(1); }
-            15% { transform: scale(1.3); }
-            30% { transform: scale(1); }
-            45% { transform: scale(1.15); }
-            60% { transform: scale(1); }
-        }
-
-        /* 3. The Final Reveal */
-        #final-page {
-            display: none;
-            z-index: 10;
-        }
-
-        .typewriter-text {
-            font-size: 80px;
-            color: var(--soft-pink);
-            text-shadow: 0 0 20px var(--primary-love);
-            white-space: nowrap;
-            overflow: hidden;
-            border-right: 3px solid var(--primary-love); /* The cursor */
-            margin: 0 auto;
-        }
-
-        /* Mouse Heart Trail */
-        .heart-trail {
-            position: absolute;
-            pointer-events: none;
-            font-size: 18px;
-            color: var(--primary-love);
-            animation: fadeAndRise 1s forwards;
-            z-index: 5;
-        }
-
-        @keyframes fadeAndRise {
-            0% { opacity: 1; transform: scale(1); }
-            100% { opacity: 0; transform: scale(1.5) translateY(-30px); }
-        }
+        .cringe-body { background-color: #fffafa; color: #333; }
     </style>
 </head>
-<body>
+<body class="cringe-body">
 
-    <div id="heart-container" onclick="revealSecret()">
-        <div class="beating-heart">
-            ❤️
-            <div class="click-me-text">Click me</div>
+    <div id="star" style="display:none;"></div>
+    <div id="shower-layer"></div>
+
+    <div id="intro-1" class="section">
+        <h1 style="font-size: 2rem;">Hi Baby</h1>
+        <button class="btn" onclick="startJourney()">CLICK ME</button>
+    </div>
+    <div id="intro-2" class="section" style="background:#000; color:#fff; width:100vw; height:100vh;">
+        <h1>Happy 6 months love... <3</h1>
+    </div>
+    <div id="special-website" class="section">
+        <h1>This was my special website for you <3</h1>
+    </div>
+    <div id="just-kidding" class="section">
+        <h1 style="color:#999; font-family: sans-serif;">Just kidding.</h1>
+    </div>
+
+    <div id="heart-container" class="section" onclick="revealProposal()">
+        <div style="font-size:80px; cursor:pointer;">❤️</div>
+        <p style="color:var(--soft-pink); margin-top: 20px;">Touch your heart...</p>
+    </div>
+
+    <div id="choice-page" class="section">
+        <h1 class="fancy-title">Will you be my love?</h1>
+        <div class="btn-group" style="display:flex; flex-direction:column; gap:15px; align-items:center; margin-top:20px;">
+            <button id="yes-btn" class="btn" style="width: 200px;" onclick="goToForever()">Yes, Forever</button>
+            <button id="no-btn" class="btn" style="width: 200px;" onclick="handleReally()">No</button>
         </div>
     </div>
 
-    <div id="final-page">
-        <div id="typewriter" class="typewriter-text"></div>
+    <div id="really-page" class="section">
+        <h1 class="fancy-title">Really?? 🤨</h1>
+        <button class="btn" id="yes-btn" onclick="handleNoChoice()">Yes...</button>
+    </div>
+
+    <div id="no-choice-page" class="section">
+        <h1 class="fancy-title" style="font-size: 2.2rem;">You don't have a choice baby. 🙄❤️</h1>
+        <button class="btn" id="no-btn" onclick="show('choice-page')">Okay fine...</button>
+    </div>
+
+    <div id="forever-page" class="section">
+        <h1 class="fancy-title">Forever?</h1>
+        <button class="btn" id="yes-btn" onclick="finalSuccess()">Yes, I promise</button>
+    </div>
+
+    <div id="success-screen" class="section">
+        <img src="celebration.gif" style="width:80%; max-width:250px; border-radius:20px;">
+        <h1 class="fancy-title" style="font-size: 2.5rem; margin-top: 20px;">I knew it!</h1>
+    </div>
+
+    <div id="final-message-screen" class="section">
+        <h1 class="fancy-title" style="font-size: 2rem;">Now that you're stuck with me forever...</h1>
+    </div>
+
+    <div id="scrapboard-screen"></div>
+
+    <div id="fancy-love-screen" class="section">
+        <h1 class="fancy-title" style="font-size: 4rem;">I Love You</h1>
+        <p style="color:var(--soft-pink); font-style: italic;">To the moon and back.</p>
+        <button class="btn" style="margin-top:30px; background:var(--gold); color:black;" onclick="show('watch-page')">Next ❤️</button>
+    </div>
+
+    <div id="watch-page" class="section">
+        <h1 class="fancy-title">A video from me</h1>
+        <button class="btn" id="yes-btn" onclick="playVideo()">Watch Now</button>
+    </div>
+
+    <div id="video-container">
+        <video id="myVideo" controls playsinline><source src="your-video.mp4" type="video/mp4"></video>
     </div>
 
     <script>
-        // 1. Initial Heart Rain
-        function spawnItem(symbol) {
-            const item = document.createElement('div');
-            item.className = 'falling-item';
-            item.innerHTML = symbol || '❤️';
-            item.style.left = Math.random() * 100 + 'vw';
-            item.style.fontSize = Math.random() * 20 + 15 + 'px';
-            item.style.animationDuration = Math.random() * 3 + 4 + 's';
-            item.style.opacity = Math.random() * 0.5 + 0.5;
-            document.body.appendChild(item);
-            setTimeout(() => item.remove(), 7000);
-        }
+        const myImages = ["image1.jpeg", "image2.jpeg", "image3.jpeg", "image4.jpeg", "image5.jpeg", "image6.jpeg"]; 
+        const myTexts = ["My Munchi", "My Baby", "My Love", "My Everything", "My Darling", "My Wife", "My Babygirl", "Nan Hendathi"];
 
-        let heartRain = setInterval(() => spawnItem('❤️'), 300);
-
-        // 2. Reveal Heart after 5 seconds
-        setTimeout(() => {
-            const container = document.getElementById('heart-container');
-            container.style.display = 'block';
-            setTimeout(() => container.style.opacity = '1', 100);
-        }, 5000);
-
-        // 3. Typing Effect Logic
-        function typeWriter(text, i, fnCallback) {
-            if (i < text.length) {
-                document.getElementById("typewriter").innerHTML = text.substring(0, i+1);
-                setTimeout(function() {
-                    typeWriter(text, i + 1, fnCallback)
-                }, 200); // Speed of typing
-            }
-        }
-
-        // 4. Final Transition
-        function revealSecret() {
-            clearInterval(heartRain);
-            document.getElementById('heart-container').style.display = 'none';
-            document.getElementById('final-page').style.display = 'block';
-
-            // Start the typing effect
-            typeWriter("..Hi..", 0);
-
-            // Change background rain to mix of roses/teddies
-            setInterval(() => {
-                const icons = ['🌹', '🧸', '💖'];
-                spawnItem(icons[Math.floor(Math.random() * icons.length)]);
-            }, 200);
-
-            // Enable Heart Mouse Trail
-            window.addEventListener('mousemove', (e) => {
-                const trail = document.createElement('div');
-                trail.className = 'heart-trail';
-                trail.innerHTML = '❤️';
-                trail.style.left = e.pageX + 'px';
-                trail.style.top = e.pageY + 'px';
-                document.body.appendChild(trail);
-                setTimeout(() => trail.remove(), 1000);
+        function show(id) {
+            document.querySelectorAll('.section, #scrapboard-screen, #video-container').forEach(s => { 
+                s.style.display = 'none'; 
+                s.style.opacity = '0'; 
             });
+            const el = document.getElementById(id);
+            el.style.display = (id === 'scrapboard-screen') ? 'flex' : 'flex';
+            el.style.flexDirection = (id === 'scrapboard-screen') ? 'row' : 'column';
+            el.style.justifyContent = (id === 'scrapboard-screen') ? 'center' : 'center';
+            el.style.alignItems = 'center';
+            setTimeout(() => { el.style.opacity = '1'; }, 50);
+        }
+
+        window.onload = () => show('intro-1');
+
+        function startJourney() {
+            const star = document.getElementById('star');
+            star.style.display = 'block'; star.classList.add('star-expand');
+            setTimeout(() => {
+                star.style.display = 'none';
+                show('intro-2');
+                setTimeout(() => {
+                    show('special-website');
+                    setTimeout(() => {
+                        document.body.classList.remove('cringe-body');
+                        show('just-kidding');
+                        setTimeout(() => {
+                            startHeartShower(); 
+                            document.body.className = 'romantic-body';
+                            show('heart-container');
+                        }, 2500);
+                    }, 3000);
+                }, 3000);
+            }, 1000);
+        }
+
+        function revealProposal() { show('choice-page'); }
+        function handleReally() { show('really-page'); }
+        function handleNoChoice() { show('no-choice-page'); }
+        function goToForever() { show('forever-page'); }
+
+        function startHeartShower() {
+            setInterval(() => {
+                const h = document.createElement('div');
+                h.className = 'heart-particle';
+                h.innerHTML = ['❤️','💖','✨','💕'][Math.floor(Math.random()*4)];
+                h.style.left = Math.random() * 100 + 'vw';
+                h.style.fontSize = Math.random() * 15 + 15 + 'px';
+                h.style.animationDuration = Math.random() * 2 + 3 + 's';
+                document.getElementById('shower-layer').appendChild(h);
+                setTimeout(() => h.remove(), 5000);
+            }, 300); // Slower generation for mobile performance
+        }
+
+        function finalSuccess() { 
+            show('success-screen'); 
+            setTimeout(() => {
+                show('final-message-screen');
+                setTimeout(startScrapboard, 3500);
+            }, 4000);
+        }
+
+        function startScrapboard() {
+            const board = document.getElementById('scrapboard-screen');
+            board.style.display = 'flex'; board.style.opacity = '1';
+            let items = [...myImages.map(s => ({type:'img', c:s})), ...myTexts.map(t => ({type:'txt', c:t}))];
+            items.sort(() => Math.random() - 0.5);
+
+            items.forEach((item, i) => {
+                setTimeout(() => {
+                    const div = document.createElement('div');
+                    const rot = (Math.random() * 10 - 5);
+                    div.style.setProperty('--r', rot + 'deg');
+                    if(item.type === 'img') {
+                        div.className = 'memory-card';
+                        div.innerHTML = `<img src="${item.c}" onerror="this.src='https://via.placeholder.com/150x200?text=Us'">`;
+                    } else {
+                        div.className = 'floating-text';
+                        div.innerHTML = item.c;
+                    }
+                    board.appendChild(div);
+                }, i * 400);
+            });
+
+            setTimeout(() => {
+                const btn = document.createElement('button');
+                btn.className = 'btn continue-btn'; btn.innerHTML = "Continue ❤️";
+                btn.onclick = () => show('fancy-love-screen');
+                board.appendChild(btn);
+            }, (items.length * 400) + 1000);
+        }
+
+        function playVideo() {
+            const container = document.getElementById('video-container');
+            container.style.display = 'flex';
+            setTimeout(() => { container.style.opacity = '1'; }, 100);
+            const v = document.getElementById('myVideo');
+            v.play();
         }
     </script>
 </body>
